--- a/src/styles/components/switcher.scss
+++ b/src/styles/components/switcher.scss
@@ -37,21 +37,12 @@
     &-left {
       height: 70px;
       min-height: 70px;
-      //width: 145px;
-      //max-width: 145px;
       min-width: calc(50% - 35px);
       width: calc(50% - 35px);
       display: flex;
       flex-direction: row;
       align-items: flex-end;
       justify-content: flex-end;
-      /* 
-      @media (min-width: 768px) {
-        min-width: calc(50%-35px);
-        width: calc(50%-35px);
-        //width: 215px;
-        //max-width: 215px;
-      } */
 
       &-vertical {
         width: 1px;
@@ -75,26 +66,14 @@
         max-height: 1px;
         width: 50%;
         min-width: 50%;
-        /* width: 70px;
-        max-width: 70px; */
-        /* @media (min-width: 768px) {
-          width: 90px;
-          max-width: 90px;
-        } */
 
         &-active {
           height: 1px;
           max-height: 1px;
           min-height: 1px;
-          /* width: 70px;
-          max-width: 70px; */
           width: 50%;
           min-width: 50%;
           background-color: $yellow;
-          /* @media (min-width: 768px) {
-            width: 90px;
-            max-width: 90px;
-          } */
         }
       }
     }
@@ -123,10 +102,6 @@
     }
 
     &-right {
-      /*       //width: 145px;
-      //max-width: 145px;
-      min-width: calc(50%-35px);
-      width: calc(50%-35px); */
       width: calc(50% - 35px);
       min-width: calc(50% - 35px);
       height: 70px;
@@ -135,12 +110,6 @@
       flex-direction: row;
       align-items: flex-end;
       justify-content: flex-start;
-
-      /*       @media (min-width: 768px) {
-        //width: 215px;
-        //max-width: 215px;
-        width: calc(50% - 35px);
-      } */
 
       &-vertical {
         width: 1px;
@@ -165,12 +134,6 @@
         min-height: 1px;
         width: 50%;
         min-width: 50%;
-        /*         width: 70px;
-        max-width: 70px;
-        @media (min-width: 768px) {
-          width: 90px;
-          max-width: 90px;
-        } */
 
         &-active {
           height: 1px;
@@ -179,13 +142,6 @@
           width: 50%;
           min-width: 50%;
           background-color: $yellow;
-          /* width: 70px;
-          max-width: 70px;
-          background-color: $yellow;
-          @media (min-width: 768px) {
-            width: 90px;
-            max-width: 90px;
-          } */
         }
       }
     }
@@ -289,19 +245,14 @@
       }
 
       & > img {
-        width: 8vw;
-        height: 8vw;
-        /* min-width: 100px;
-        max-width: 100px;
-
-        min-height: 100px;
-        max-height: 100px; */
+        width: 25vw;
+        height: 25vw;
 
         @media (min-width: 768px) {
-          /*           width: 100%;
-          max-width: 150px;
-          min-height: 150px;
-          max-height: 150px; */
+          width: 18vw;
+          height: 18vw;
+        }
+        @media (min-width: 1025px) {
           width: 8vw;
           height: 8vw;
         }
@@ -323,9 +274,6 @@
     }
 
     &-shadow {
-      /* width: 150px;
-      max-width: 150px;
-      min-width: 150px; */
       width: 100%;
       min-width: 100%;
       height: 30px;
@@ -334,15 +282,9 @@
       @media (min-width: 768px) {
         width: 100%;
         min-width: 100%;
-        /* width: 220px;
-        max-width: 220px;
-        min-width: 220px; */
       }
 
       &-active {
-        //width: 150px;
-        //max-width: 150px;
-        //min-width: 150px;
         min-width: 100%;
         height: 30px;
         margin: 10px 0;
@@ -352,9 +294,6 @@
         background-size: contain;
 
         @media (min-width: 768px) {
-          //width: 220px;
-          //max-width: 220px;
-          //min-width: 220px;
           min-width: 100%;
         }
       }
